// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene findByIdAndUpdate should update a scene 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "this is an updated second test",
  "name": "scene_2",
  "sceneId": 2,
  "updatedAt": Any<Date>,
}
`;

exports[`Scene findByIdAndUpdate should update a scene 2`] = `
Array [
  RowDataPacket {
    "actionId": 4,
    "body": "{\\"on\\":false}",
    "name": "action turn off",
    "sceneId": 2,
    "targetId": 2,
    "type": "DIO",
  },
  RowDataPacket {
    "actionId": 5,
    "body": "{\\"on\\":true}",
    "name": "action turn off",
    "sceneId": 2,
    "targetId": 4,
    "type": "DIO",
  },
]
`;

exports[`Scene save should save a new scene 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "save test",
  "name": "scene_3",
  "sceneId": 3,
  "updatedAt": Any<Date>,
}
`;

exports[`Scene save should save a new scene 2`] = `
Array [
  RowDataPacket {
    "actionId": 4,
    "body": "{\\"on\\":true}",
    "name": "action one",
    "sceneId": 3,
    "targetId": 1,
    "type": "DIO",
  },
  RowDataPacket {
    "actionId": 5,
    "body": "{\\"on\\":true,\\"bri\\":255}",
    "name": "action two",
    "sceneId": 3,
    "targetId": 1,
    "type": "HUE_LIGHT",
  },
]
`;
